[package]
name = "dist_proxy"
version = "0.1.0"
edition = "2021"
default-run = "dist_proxy"

[dependencies]
ethers-core = "2.0.10"
hex = "0.4.3"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.192"
serde_derive = "1.0.192"
serde_json = "1.0.108"
sha2 = "0.10.7"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.1"
warp = "0.3.6"
